# Cariosity2018

./: .gitignore  CMakeLists.txt  README.md  build_all.sh  build_user_release.sh  fhw.xodr  run_camera_tweaking.sh  run_default.sh  run_playback.sh
config/LiveVisualization/: LiveVisualization.adtfproject
config/LiveVisualization/adtfsessions/: camera_calibration.adtfuilayout  camera_tweaking.adtfsession  camera_tweaking.adtfuilayout  default_session.adtfsession  default_session.adtfuilayout  default_session.adtfuilayout.L22251  default_session.adtfuilayout.L27128  devel.adtfsession  devel.adtfuilayout  playback.adtfsession  playback.adtfuilayout  recording.adtfuilayout
config/LiveVisualization/adtfsessions/adtfgraphs/: .signal_scope_view.ui_service.adtf_disptb  .signal_table_view.ui_service.adtf_disptb  .signal_tree_view.ui_service.adtf_disptb  default_graph.adtfconfiglayout  default_graph.adtfgraph  default_graph.adtfproperties
config/LiveVisualization/adtfsessions/adtfsystems/: default_system.adtfproperties  default_system.adtfsystem
config/felix_mapvis/felix_mapvis/adtfsessions/: default_session.adtfuilayout
config/felix_mapvis/felix_mapvis/adtfsessions/adtfgraphs/: .signal_scope_view.ui_service.adtf_disptb  .signal_table_view.ui_service.adtf_disptb  default_graph.adtfconfiglayout  default_graph.adtfgraph  default_graph.adtfproperties
config/felix_mapvis/felix_mapvis/adtfsessions/adtfsystems/: default_system.adtfproperties  default_system.adtfsystem
configuration_files/: camara_intr_calibration.yml  camara_intr_calibration_old_please_for_the_sake_of_god_dont_use_this_one.yml  maneuverlistfhw.xml  roadSigns.xml
description/: aadc_fhw.description
include/: aadc_jury.h
src/aadcDemo/datafilter/ConverterWheels/: ConverterWheels.cpp
src/aadcUser/: CMakeLists.txt
src/aadcUser/Actuators/: CMakeLists.txt  toImplement.txt
src/aadcUser/Actuators/AngleToServo/: AngleToServo.cpp  AngleToServo.h  CMakeLists.txt
src/aadcUser/Actuators/WheelSpeedController/: CMakeLists.txt  WheelSpeedController.cpp  WheelSpeedController.h
src/aadcUser/BirdsEyeTransform/: BirdsEyeTransform.cpp  BirdsEyeTransform.h  CMakeLists.txt
src/aadcUser/EmergencyBrake/: CMakeLists.txt  EmergencyBrake.cpp  EmergencyBrake.h  stdafx.h
src/aadcUser/EnvironmentModel/: CMakeLists.txt  EnvironmentalModel.cpp  EnvironmentalModel.h  stdafx.h
src/aadcUser/EnvironmentModel/Models/: EgoState.cpp  EgoState.h  Entity.cpp  Entity.h  Map.cpp  Map.h
src/aadcUser/GoalControl/: CMakeLists.txt
src/aadcUser/GoalControl/GoalController/: GoalController.cpp  GoalController.h  stdafx.h
src/aadcUser/GoalControl/JuryModuleReceiver/: CMakeLists.txt  JuryModuleReceiver.cpp  JuryModuleReceiver.h
src/aadcUser/GoalControl/JuryModuleSender/: CMakeLists.txt  JuryModuleSender.cpp  JuryModuleSender.h  stdafx.h
src/aadcUser/GoalControl/Tasks/: Task.cpp  Task.h  Task_DoNothing.cpp  Task_DoNothing.h  Task_EmergencyCar.cpp  Task_EmergencyCar.h  Task_IntersectionHandling.cpp  Task_IntersectionHandling.h  Task_LaneFollowing.cpp  Task_LaneFollowing.h  Task_LidarRamp.cpp  Task_LidarRamp.h  Task_MergeScenario.cpp  Task_MergeScenario.h  Task_Overtaking.cpp  Task_Overtaking.h  Task_PullInRight.cpp  Task_PullInRight.h  Task_PullOutLeft.cpp  Task_PullOutLeft.h  Task_PullOutRight.cpp  Task_PullOutRight.h  Task_ZebraCrossing.cpp  Task_ZebraCrossing.h  stdafx.h  tasks.h
src/aadcUser/Helpers/: Median.cpp  Median.h  StdFilter.cpp  StdFilter.h  cariosity_enums.h  cariosity_structs.h  ddlStructs.h  stdafx.h  toImplement.txt
src/aadcUser/Helpers/OpenDriveAnalyzer/: OpenDriveMapAnalyzer.cpp  OpenDriveMapAnalyzer.h
src/aadcUser/Helpers/OpenDriveAnalyzer/mapReader/: openDriveReader.cpp  openDriveReader.h
src/aadcUser/LaneDetection/: CMakeLists.txt  LaneDetection.cpp  LaneDetection.h  stdafx.h
src/aadcUser/MissionControl/: CMakeLists.txt  MissionController.cpp  MissionController.h  stdafx.h
src/aadcUser/ObjectDetection/: .gitignore  CMakeLists.txt  ObjectDetectionFilter.cpp  ObjectDetectionFilter.h  YOLOv3SE.h  stdafx.h
src/aadcUser/OpenDriveAnalyzer/: CMakeLists.txt  MapVisualization.cpp  MapVisualization.h  displaywidget.cpp  displaywidget.h  stdafx.h
src/aadcUser/Sensors/: CMakeLists.txt
src/aadcUser/Sensors/SensorLidar/: CMakeLists.txt  SensorLidar.cpp  SensorLidar.h  stdafx.h
src/aadcUser/Sensors/SensorUltraSonic/: CMakeLists.txt  SensorUltraSonic.cpp  SensorUltraSonic.h
src/aadcUser/Sensors/WheelSpeedConverter/: CMakeLists.txt  WheelSpeedConverter.cpp  WheelSpeedConverter.h  stdafx.h
